--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         </ul>
       </nav>
       <span class="contact-link menu-link">
+        <svg class="icon" width="16" height="12">
+          <use href="../images/icons.svg/icon-envelope"></use>
+        </svg>  
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+48111111111">+48 111 111 111</a>
       </span>
@@ -47,6 +50,31 @@
       <!-- TEKST -->
       <section>
           <ul class="container-text">
+            <li>
+              <svg class="icon" width="270" height="120">
+                <use href="../images/icons.svg/icon-antenna-1"></use>
+              </svg>  
+            </li>
+            <li>
+              <svg class="icon" width="270" height="120">
+                <use href="../images/icons.svg/icon-clock-1"></use>
+              </svg>  
+            </li>
+            <li>
+              <svg class="icon" width="270" height="120">
+                <use href="../images/icons.svg/icon-diagram-1"></use>
+              </svg>  
+            </li>
+            <li>
+              <svg class="icon" width="270" height="120">
+                <use href="../images/icons.svg/icon-astronaut-1"></use>
+              </svg>  
+            </li>
+            <li>
+              <svg class="icon" width="270" height="120">
+                <use href="../images/icons.svg/icon-antenna-1"></use>
+              </svg>  
+            </li>
             <li>
               <h6 class="content-title">LOREM IPSUM</h6>
               <p class="content-text">
