--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </nav>
       <span class="contact-link menu-link">
         <svg class="icon" width="16" height="12">
-          <use href="../images/icons.svg/icon-envelope"></use>
+          <use href="../images/icons.svg#icon-envelope"></use>
         </svg>  
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+48111111111">+48 111 111 111</a>
@@ -47,34 +47,38 @@
            DLA WASZEGO BIZNESU</h1>
         <button type="button" class="order-link a">Zamów usługę</button>
       </section>
-      <!-- TEKST -->
+      <!-- IKONY I TEKST -->
       <section>
-          <ul class="container-text">
+          <ul class="icons">
+            <li>
+              <svg class="icon" width="270" height="120">
+                <use href="../images/icons.svg#icon-antenna-1"></use>
+              </svg>  
+            </li>
+            <li>
+              <svg class="icon" width="270" height="120">
+                <use href="../images/icons.svg#icon-clock-1"></use>
+              </svg>  
+            </li>
+            <li>
+              <svg class="icon" width="270" height="120">
+                <use href="../images/icons.svg#icon-diagram-1"></use>
+              </svg>  
+            </li>
+            <li>
+              <svg class="icon" width="270" height="120">
+                <use href="../images/icons.svg#icon-astronaut-1"></use>
+              </svg>  
+            </li>
             <li>
               <svg class="icon" width="270" height="120">
                 <use href="../images/icons.svg/icon-antenna-1"></use>
               </svg>  
             </li>
-            <li>
-              <svg class="icon" width="270" height="120">
-                <use href="../images/icons.svg/icon-clock-1"></use>
-              </svg>  
-            </li>
-            <li>
-              <svg class="icon" width="270" height="120">
-                <use href="../images/icons.svg/icon-diagram-1"></use>
-              </svg>  
-            </li>
-            <li>
-              <svg class="icon" width="270" height="120">
-                <use href="../images/icons.svg/icon-astronaut-1"></use>
-              </svg>  
-            </li>
-            <li>
-              <svg class="icon" width="270" height="120">
-                <use href="../images/icons.svg/icon-antenna-1"></use>
-              </svg>  
-            </li>
+            </ul>
+      </section>      
+      <section>
+            <ul class="container-text">
             <li>
               <h6 class="content-title">LOREM IPSUM</h6>
               <p class="content-text">
