--- a/index.html
+++ b/index.html
@@ -15,32 +15,40 @@
     <link rel="stylesheet" href="./css/styles.css"/> 
   </head>
   <body>
-    <header class="header">
+    <header class="headers">
+      <div class="container headers-section">
       <a class="brand-link" href="#">
-        <p class="logo">Web<span class="brand-h">Studio</span></p> 
+      Web<span class="brand-h">Studio</span>
       </a>
-      <nav class="navigation">
+      <nav>
         <ul class="menu">
           <li class="menu-item">
-            <a href="#">Agencja</a>
+          <a href="#">Agencja</a>
           </li>
           <li class="menu-item">
-            <a href="./portfolio.html">Portfolio</a>
+          <a href="./portfolio.html">Portfolio</a>
           </li>
           <li class="menu-item">
-            <a href="#">Kontakt</a>
+          <a href="#">Kontakt</a>
           </li>
         </ul>
       </nav>
-      <span class="contact-link menu-link">
+      <span>
+        <ul class="menu-links">
         <svg class="icon" width="16" height="12">
           <use href="../images/icons.svg#icon-envelope"></use>
-        </svg>  
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+48111111111">+48 111 111 111</a>
+        </svg>
+        <li>  
+        <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+        <a class="contact-link" href="tel:+48111111111">+48 111 111 111</a>
+        </li>
+        </ul>
       </span>
+      </div>
     </header>
-    <main class="main">
+    <main>
       <!-- HERO -->
       <section class="hero">
         <h1 class="main-text">EFEKTYWNE ROZWIĄZANIA
