--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
     </header>
     <main>
       <!-- HERO -->
-      <section class="hero">
+      <section class="section box">
+        <div class="container hero">
         <h1 class="main-text">EFEKTYWNE ROZWIĄZANIA
            DLA WASZEGO BIZNESU</h1>
-        <button type="button" class="order-link a">Zamów usługę</button>
+        <button type="button" class="order-link">Zamów usługę</button>
+        </div>
       </section>
       <!-- IKONY I TEKST -->
       <section>
@@ -85,30 +87,31 @@
             </li>
             </ul>
       </section>      
-      <section>
-            <ul class="container-text">
-            <li>
+      <section class="section box">
+        <div class="container">
+          <ul class="container-text">
+            <li class="text-box">
               <h6 class="content-title">LOREM IPSUM</h6>
               <p class="content-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
+            <li class="text-box">
               <h6 class="content-title">LOREM IPSUM</h6>
               <p class="content-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
+            <li class="text-box">
               <h6 class="content-title">LOREM IPSUM</h6>
               <p class="content-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
+            <li class="text-box">
               <h6 class="content-title">LOREM IPSUM</h6>
               <p class="content-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -116,10 +119,12 @@
               </p>
             </li>
           </ul>
+          </div>
       </section>
       <!-- ZDJECIA CZYM SIE ZAJMUJEMY -->
-      <section class="container-wwd">
-          <h2 class="section-subject-wwd">Czym sie zajmujemy</h2>
+      <section class="section box">
+        <div class="container">
+          <h2 class="subject-wwd">Czym sie zajmujemy</h2>
           <ul class="container-img">
             <li>
               <img
@@ -146,9 +151,11 @@
               />
             </li>
           </ul>
+          </div>
       </section>
       <!-- ZESPOL -->
-      <section class="container-team">
+      <section class="section box">
+        <div class="container container-team">
           <h2 class="section-subject">Nasz zespół</h2>
           <ul class="container-memb">
             <li>
@@ -208,17 +215,20 @@
               </figure>
               </li>
           </ul>
+        </div>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footers">
+      <div class="container footers-section">
         <a class="brand-link" href="#">
-        <p>Web<span class="brand-f">Studio</span></p>
+        Web<span class="brand-f">Studio</span>
        </a>
       <address class="footer-box">
         <p class="address-link">m.Warszawa, Aleje Jerozolimskie 21</p>
         <a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a>
         <a href="tel:+48111111111" class="footer-link">+48 111 111 111</a>
+      </div>
       </address>
     </footer>
   </body>
-</html>
+</html>    
