--- a/index.html
+++ b/index.html
@@ -39,7 +39,14 @@
             <svg class="icon" width="16" height="12">
               <use href="../images/icons.svg#icon-envelope"></use>
             </svg>
+          </li>
+          <li>
           <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <svg class="icon" width="16" height="12">
+              <use href="../images/icons.svg#icon-smartphone"></use>
+            </svg>
           </li>
           <li>
           <a class="contact-link" href="tel:+48111111111">+48 111 111 111</a>
@@ -58,7 +65,8 @@
         </div>
       </section>
       <!-- IKONY I TEKST -->
-      <section>
+      <section class="section box">
+        <section class="container">
           <ul class="icons">
             <li>
               <svg class="icon" width="270" height="120">
@@ -86,6 +94,7 @@
               </svg>  
             </li>
             </ul>
+        </section>   
       </section>      
       <section class="section box">
         <div class="container">
@@ -217,7 +226,45 @@
           </ul>
         </div>
       </section>
+    <!-- Nasi Klienci -->
+    <section class="section box">
+      <section class="container">
+        <ul class="icons">
+          <li>
+            <svg class="icon" width="270" height="120">
+              <use href="../images/icons.svg#icon-Client-1"></use>
+            </svg>  
+          </li>
+          <li>
+            <svg class="icon" width="270" height="120">
+              <use href="../images/icons.svg#icon-Client-2"></use>
+            </svg>  
+          </li>
+          <li>
+            <svg class="icon" width="270" height="120">
+              <use href="../images/icons.svg#icon-Client-3"></use>
+            </svg>  
+          </li>
+          <li>
+            <svg class="icon" width="270" height="120">
+              <use href="../images/icons.svg/icon-Client-4"></use>
+            </svg>  
+          </li>
+          <li>
+            <svg class="icon" width="270" height="120">
+              <use href="../images/icons.svg#icon-Client-5"></use>
+            </svg>  
+          </li>
+          <li>
+            <svg class="icon" width="270" height="120">
+              <use href="../images/icons.svg/icon-Client-6"></use>
+            </svg>  
+          </li>
+          </ul>
+      </section>   
+    </section>      
     </main>
+    <!-- Footer -->
     <footer class="footers">
       <div class="container footers-section">
         <a class="brand-link" href="#">
@@ -227,6 +274,31 @@
         <p class="address-link">m.Warszawa, Aleje Jerozolimskie 21</p>
         <a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a>
         <a href="tel:+48111111111" class="footer-link">+48 111 111 111</a>
+      </div>
+      <div>
+        <p>DOŁĄCZ DO NAS</p>
+        <ul>
+          <li>
+            <svg class="icon" width="270" height="120">
+              <use href="../images/icons.svg#icon-Client-3"></use>
+            </svg>  
+          </li>
+          <li>
+            <svg class="icon" width="270" height="120">
+              <use href="../images/icons.svg/icon-Client-4"></use>
+            </svg>  
+          </li>
+          <li>
+            <svg class="icon" width="270" height="120">
+              <use href="../images/icons.svg#icon-Client-5"></use>
+            </svg>  
+          </li>
+          <li>
+            <svg class="icon" width="270" height="120">
+              <use href="../images/icons.svg/icon-Client-6"></use>
+            </svg>  
+          </li>
+        </ul>
       </div>
       </address>
     </footer>
