--- a/index.html
+++ b/index.html
@@ -280,22 +280,22 @@
         <ul>
           <li>
             <svg class="icon" width="270" height="120">
-              <use href="../images/icons.svg#icon-Client-3"></use>
+              <use href="../images/icons.svg#icon-instagram-2"></use>
             </svg>  
           </li>
           <li>
             <svg class="icon" width="270" height="120">
-              <use href="../images/icons.svg/icon-Client-4"></use>
+              <use href="../images/icons.svg/icon-twitter-1"></use>
             </svg>  
           </li>
           <li>
             <svg class="icon" width="270" height="120">
-              <use href="../images/icons.svg#icon-Client-5"></use>
+              <use href="../images/icons.svg#icon-facebook-1"></use>
             </svg>  
           </li>
           <li>
             <svg class="icon" width="270" height="120">
-              <use href="../images/icons.svg/icon-Client-6"></use>
+              <use href="../images/icons.svg/icon-linkedin-1"></use>
             </svg>  
           </li>
         </ul>
