--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <svg class="icon" width="16" height="12">
+            <svg class="icon" width="10" height="16">
               <use href="../images/icons.svg#icon-smartphone"></use>
             </svg>
           </li>
@@ -57,7 +57,7 @@
       </header>
       <main>
       <!-- HERO -->
-      <section class="section box">
+      <section class="section box teamphoto">
         <div class="container hero">
         <h1 class="main-text">EFEKTYWNE ROZWIĄZANIA
            DLA WASZEGO BIZNESU</h1>
@@ -69,28 +69,23 @@
         <section class="container">
           <ul class="icons">
             <li>
-              <svg class="icon" width="270" height="120">
-                <use href="../images/icons.svg#icon-antenna-1"></use>
+              <svg class="icon iconx" width="270" height="120">
+                <use href="../images/icons.svg#icon-antenna"></use>
               </svg>  
             </li>
             <li>
-              <svg class="icon" width="270" height="120">
-                <use href="../images/icons.svg#icon-clock-1"></use>
+              <svg class="icon iconx" width="270" height="120">
+                <use href="../images/icons.svg#icon-clock"></use>
               </svg>  
             </li>
             <li>
-              <svg class="icon" width="270" height="120">
-                <use href="../images/icons.svg#icon-diagram-1"></use>
+              <svg class="icon iconx" width="270" height="120">
+                <use href="../images/icons.svg#icon-diagram"></use>
               </svg>  
             </li>
             <li>
-              <svg class="icon" width="270" height="120">
-                <use href="../images/icons.svg#icon-astronaut-1"></use>
-              </svg>  
-            </li>
-            <li>
-              <svg class="icon" width="270" height="120">
-                <use href="../images/icons.svg/icon-antenna-1"></use>
+              <svg class="icon iconx" width="270" height="120">
+                <use href="../images/icons.svg#icon-astronaut"></use>
               </svg>  
             </li>
             </ul>
@@ -232,32 +227,32 @@
         <ul class="icons">
           <li>
             <svg class="icon" width="270" height="120">
-              <use href="../images/icons.svg#icon-Client-1"></use>
+              <use href="../images/icons.svg#icon-client-1"></use>
             </svg>  
           </li>
           <li>
             <svg class="icon" width="270" height="120">
-              <use href="../images/icons.svg#icon-Client-2"></use>
+              <use href="../images/icons.svg#icon-client-2"></use>
             </svg>  
           </li>
           <li>
             <svg class="icon" width="270" height="120">
-              <use href="../images/icons.svg#icon-Client-3"></use>
+              <use href="../images/icons.svg#icon-client-3"></use>
             </svg>  
           </li>
           <li>
             <svg class="icon" width="270" height="120">
-              <use href="../images/icons.svg/icon-Client-4"></use>
+              <use href="../images/icons.svg/icon-client-4"></use>
             </svg>  
           </li>
           <li>
             <svg class="icon" width="270" height="120">
-              <use href="../images/icons.svg#icon-Client-5"></use>
+              <use href="../images/icons.svg#icon-client-5"></use>
             </svg>  
           </li>
           <li>
             <svg class="icon" width="270" height="120">
-              <use href="../images/icons.svg/icon-Client-6"></use>
+              <use href="../images/icons.svg/icon-client-6"></use>
             </svg>  
           </li>
           </ul>
@@ -275,32 +270,32 @@
         <a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a>
         <a href="tel:+48111111111" class="footer-link">+48 111 111 111</a>
       </div>
+      </address>
       <div>
         <p>DOŁĄCZ DO NAS</p>
         <ul>
           <li>
             <svg class="icon" width="270" height="120">
-              <use href="../images/icons.svg#icon-instagram-2"></use>
+              <use href="../images/icons.svg#icon-instagram"></use>
             </svg>  
           </li>
           <li>
             <svg class="icon" width="270" height="120">
-              <use href="../images/icons.svg/icon-twitter-1"></use>
+              <use href="../images/icons.svg/icon-twitter"></use>
             </svg>  
           </li>
           <li>
             <svg class="icon" width="270" height="120">
-              <use href="../images/icons.svg#icon-facebook-1"></use>
+              <use href="../images/icons.svg#icon-facebook"></use>
             </svg>  
           </li>
           <li>
             <svg class="icon" width="270" height="120">
-              <use href="../images/icons.svg/icon-linkedin-1"></use>
+              <use href="../images/icons.svg/icon-linkedin"></use>
             </svg>  
           </li>
         </ul>
       </div>
-      </address>
     </footer>
   </body>
 </html>    
