--- a/index.html
+++ b/index.html
@@ -223,40 +223,41 @@
       </section>
     <!-- Nasi Klienci -->
     <section class="section box">
-      <section class="container">
+      <div class="container">
+        <h2 class="clients">Nasi klienci</h2>
         <ul class="icons">
           <li>
-            <svg class="icon" width="270" height="120">
+            <svg class="icon icony" width="170" height="92">
               <use href="../images/icons.svg#icon-client-1"></use>
             </svg>  
           </li>
           <li>
-            <svg class="icon" width="270" height="120">
+            <svg class="icon icony" width="170" height="92">
               <use href="../images/icons.svg#icon-client-2"></use>
             </svg>  
           </li>
           <li>
-            <svg class="icon" width="270" height="120">
+            <svg class="icon icony" width="170" height="92">
               <use href="../images/icons.svg#icon-client-3"></use>
             </svg>  
           </li>
           <li>
-            <svg class="icon" width="270" height="120">
+            <svg class="icon icony" width="170" height="92">
               <use href="../images/icons.svg/icon-client-4"></use>
             </svg>  
           </li>
           <li>
-            <svg class="icon" width="270" height="120">
+            <svg class="icon icony" width="170" height="92">
               <use href="../images/icons.svg#icon-client-5"></use>
             </svg>  
           </li>
           <li>
-            <svg class="icon" width="270" height="120">
+            <svg class="icon icony" width="170" height="92">
               <use href="../images/icons.svg/icon-client-6"></use>
             </svg>  
           </li>
           </ul>
-      </section>   
+        </div>   
     </section>      
     </main>
     <!-- Footer -->
@@ -275,22 +276,22 @@
         <p>DOŁĄCZ DO NAS</p>
         <ul>
           <li>
-            <svg class="icon" width="270" height="120">
+            <svg class="icon" width="10.28" height="10.28">
               <use href="../images/icons.svg#icon-instagram"></use>
             </svg>  
           </li>
           <li>
-            <svg class="icon" width="270" height="120">
+            <svg class="icon" width="20" height="16.25">
               <use href="../images/icons.svg/icon-twitter"></use>
             </svg>  
           </li>
           <li>
-            <svg class="icon" width="270" height="120">
+            <svg class="icon" width="10" height="20">
               <use href="../images/icons.svg#icon-facebook"></use>
             </svg>  
           </li>
           <li>
-            <svg class="icon" width="270" height="120">
+            <svg class="icon" width="20" height="20">
               <use href="../images/icons.svg/icon-linkedin"></use>
             </svg>  
           </li>
