--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <div class="container container-team">
           <h2 class="section-subject">Nasz zespół</h2>
           <ul class="container-memb">
-            <li>
+            <li class="shad">
               <figure class="frame">
                 <img
                   src="./images/image-5.jpg"
@@ -176,7 +176,7 @@
                 </figcaption>    
               </figure>
               </li>
-            <li>
+            <li class="shad">
               <figure class="frame">
                 <img
                   src="./images/image-6.jpg"
@@ -190,7 +190,7 @@
                 </figcaption>
               </figure>
               </li>
-            <li>
+            <li class="shad">
               <figure class="frame">
                 <img
                   src="./images/image-7.jpg"
@@ -204,7 +204,7 @@
                 </figcaption>
               </figure>
             </li>
-            <li>
+            <li class="shad">
               <figure class="frame">
                 <img
                   src="./images/image-8.jpg"
@@ -273,9 +273,9 @@
       </div>
       </address>
       <div>
-        <p>DOŁĄCZ DO NAS</p>
-        <ul>
-          <li>
+        <p class="join">DOŁĄCZ DO NAS</p>
+        <ul class="icons">
+          <li class="mediaw">
             <svg class="icon" width="10.28" height="10.28">
               <use href="../images/icons.svg#icon-instagram"></use>
             </svg>  
