--- a/portfolio.html
+++ b/portfolio.html
@@ -53,19 +53,19 @@
       <section class="section box">
         <div class="container">
         <ul class="option-buttons">
-          <li>
+          <li class="button-shadow">
           <button class="option-button" type="button">Wszystkie</button>
           </li>
-          <li>
+          <li class="button-shadow">
           <button class="option-button" type="button">Strony</button>
           </li>
-          <li>
+          <li class="button-shadow">
           <button class="option-button" type="button">Aplikacje</button>
           </li>
-          <li>
+          <li class="button-shadow">
           <button class="option-button" type="button">Dizajn</button>
           </li>
-          <li>
+          <li class="button-shadow">
           <button class="option-button" type="button">Marketing</button>
           </li>
         </ul> 
