--- a/index.html
+++ b/index.html
@@ -33,26 +33,26 @@
           </li>
         </ul>
       </nav>
-      <span>
+      <div>
         <ul class="menu-links">
-          <li>  
-            <svg class="icon" width="16" height="12">
+          <li class="icon">  
+            <svg width="16" height="12">
               <use href="../images/icons.svg#icon-envelope"></use>
             </svg>
           </li>
-          <li>
+          <li class="link-item">
           <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li>
-            <svg class="icon" width="10" height="16">
+          <li class="icon">
+            <svg width="10" height="16">
               <use href="../images/icons.svg#icon-smartphone"></use>
             </svg>
           </li>
-          <li>
+          <li class="link-item">
           <a class="contact-link" href="tel:+48111111111">+48 111 111 111</a>
           </li>
           </ul>
-        </span>
+      </div>
         </div>
       </header>
       <main>
@@ -68,23 +68,23 @@
       <section class="section box">
         <section class="container">
           <ul class="icons">
-            <li>
-              <svg class="icon iconx" width="270" height="120">
+            <li class="icon-index">
+              <svg width="270" height="120">
                 <use href="../images/icons.svg#icon-antenna"></use>
               </svg>  
             </li>
-            <li>
-              <svg class="icon iconx" width="270" height="120">
+            <li class="icon-index">
+              <svg width="270" height="120">
                 <use href="../images/icons.svg#icon-clock"></use>
               </svg>  
             </li>
-            <li>
-              <svg class="icon iconx" width="270" height="120">
+            <li class="icon-index">
+              <svg width="270" height="120">
                 <use href="../images/icons.svg#icon-diagram"></use>
               </svg>  
             </li>
-            <li>
-              <svg class="icon iconx" width="270" height="120">
+            <li class="icon-index">
+              <svg width="270" height="120">
                 <use href="../images/icons.svg#icon-astronaut"></use>
               </svg>  
             </li>
@@ -173,7 +173,31 @@
                 <figcaption> 
                 <p class="team-name">John Doe</p>
                 <p class="team-position">Product Designer</p>
-                </figcaption>    
+                <div class="somedia-box">  
+                <ul class="icons">
+                  <li class="somedia">
+                    <svg width="10.28" height="10.28">
+                      <use href="../images/icons.svg#icon-instagram"></use>
+                    </svg>  
+                  </li>
+                  <li class="somedia">
+                    <svg width="20" height="16.25">
+                      <use href="../images/icons.svg/icon-twitter"></use>
+                    </svg>  
+                  </li>
+                  <li class="somedia">
+                    <svg width="10" height="20">
+                      <use href="../images/icons.svg#icon-facebook"></use>
+                    </svg>  
+                  </li>
+                  <li class="somedia">
+                    <svg width="20" height="20">
+                      <use href="../images/icons.svg/icon-linkedin"></use>
+                    </svg>  
+                  </li>
+                </ul> 
+                </div> 
+                </figcaption>
               </figure>
               </li>
             <li class="shad">
@@ -184,6 +208,30 @@
                   width="270"
                   height="260"
                 />
+                <div class="somedia-box">  
+                  <ul class="icons">
+                    <li class="somedia">
+                      <svg width="10.28" height="10.28">
+                        <use href="../images/icons.svg#icon-instagram"></use>
+                      </svg>  
+                    </li>
+                    <li class="somedia">
+                      <svg width="20" height="16.25">
+                        <use href="../images/icons.svg/icon-twitter"></use>
+                      </svg>  
+                    </li>
+                    <li class="somedia">
+                      <svg width="10" height="20">
+                        <use href="../images/icons.svg#icon-facebook"></use>
+                      </svg>  
+                    </li>
+                    <li class="somedia">
+                      <svg width="20" height="20">
+                        <use href="../images/icons.svg/icon-linkedin"></use>
+                      </svg>  
+                    </li>
+                  </ul> 
+                  </div> 
                 <figcaption> 
                 <p class="team-name">John Doe</p>
                 <p class="team-position">Frontend Designer</p>
@@ -201,6 +249,30 @@
                 <figcaption>
                 <p class="team-name">John Doe</p>
                 <p class="team-position">Marketing</p>
+                <div class="somedia-box">  
+                  <ul class="icons">
+                    <li class="somedia">
+                      <svg width="10.28" height="10.28">
+                        <use href="../images/icons.svg#icon-instagram"></use>
+                      </svg>  
+                    </li>
+                    <li class="somedia">
+                      <svg width="20" height="16.25">
+                        <use href="../images/icons.svg/icon-twitter"></use>
+                      </svg>  
+                    </li>
+                    <li class="somedia">
+                      <svg width="10" height="20">
+                        <use href="../images/icons.svg#icon-facebook"></use>
+                      </svg>  
+                    </li>
+                    <li class="somedia">
+                      <svg width="20" height="20">
+                        <use href="../images/icons.svg/icon-linkedin"></use>
+                      </svg>  
+                    </li>
+                  </ul> 
+                  </div> 
                 </figcaption>
               </figure>
             </li>
@@ -215,6 +287,30 @@
                 <figcaption> 
                 <p class="team-name">John Doe</p>
                 <p class="team-position">UI Designer</p>
+                <div class="somedia-box">  
+                  <ul class="icons">
+                    <li class="somedia">
+                      <svg width="10.28" height="10.28">
+                        <use href="../images/icons.svg#icon-instagram"></use>
+                      </svg>  
+                    </li>
+                    <li class="somedia">
+                      <svg width="20" height="16.25">
+                        <use href="../images/icons.svg/icon-twitter"></use>
+                      </svg>  
+                    </li>
+                    <li class="somedia">
+                      <svg width="10" height="20">
+                        <use href="../images/icons.svg#icon-facebook"></use>
+                      </svg>  
+                    </li>
+                    <li class="somedia">
+                      <svg width="20" height="20">
+                        <use href="../images/icons.svg/icon-linkedin"></use>
+                      </svg>  
+                    </li>
+                  </ul> 
+                  </div> 
                 </figcaption>  
               </figure>
               </li>
@@ -226,33 +322,33 @@
       <div class="container">
         <h2 class="clients">Nasi klienci</h2>
         <ul class="icons">
-          <li>
-            <svg class="icon icony" width="170" height="92">
+          <li class="icon-border">
+            <svg width="170" height="92">
               <use href="../images/icons.svg#icon-client-1"></use>
             </svg>  
           </li>
-          <li>
-            <svg class="icon icony" width="170" height="92">
+          <li class="icon-border">
+            <svg width="170" height="92">
               <use href="../images/icons.svg#icon-client-2"></use>
             </svg>  
           </li>
-          <li>
-            <svg class="icon icony" width="170" height="92">
+          <li class="icon-border">
+            <svg width="170" height="92">
               <use href="../images/icons.svg#icon-client-3"></use>
             </svg>  
           </li>
-          <li>
-            <svg class="icon icony" width="170" height="92">
+          <li class="icon-border">
+            <svg width="170" height="92">
               <use href="../images/icons.svg/icon-client-4"></use>
             </svg>  
           </li>
-          <li>
-            <svg class="icon icony" width="170" height="92">
+          <li class="icon-border">
+            <svg width="170" height="92">
               <use href="../images/icons.svg#icon-client-5"></use>
             </svg>  
           </li>
-          <li>
-            <svg class="icon icony" width="170" height="92">
+          <li class="icon-border">
+            <svg width="170" height="92">
               <use href="../images/icons.svg/icon-client-6"></use>
             </svg>  
           </li>
@@ -262,7 +358,8 @@
     </main>
     <!-- Footer -->
     <footer class="footers">
-      <div class="container footers-section">
+      <div class="container global-footer">
+      <div class="footers-section">
         <a class="brand-link" href="#">
         Web<span class="brand-f">Studio</span>
        </a>
@@ -272,30 +369,31 @@
         <a href="tel:+48111111111" class="footer-link">+48 111 111 111</a>
       </div>
       </address>
-      <div>
-        <p class="join">DOŁĄCZ DO NAS</p>
+      <div class="joinus-box">
+        <p class="joinus">DOŁĄCZ DO NAS</p>
         <ul class="icons">
-          <li class="mediaw">
-            <svg class="icon" width="10.28" height="10.28">
+          <li class="somedia">
+            <svg width="10.28" height="10.28">
               <use href="../images/icons.svg#icon-instagram"></use>
             </svg>  
           </li>
-          <li>
-            <svg class="icon" width="20" height="16.25">
+          <li class="somedia">
+            <svg width="20" height="16.25">
               <use href="../images/icons.svg/icon-twitter"></use>
             </svg>  
           </li>
-          <li>
-            <svg class="icon" width="10" height="20">
+          <li class="somedia">
+            <svg width="10" height="20">
               <use href="../images/icons.svg#icon-facebook"></use>
             </svg>  
           </li>
-          <li>
-            <svg class="icon" width="20" height="20">
+          <li class="somedia">
+            <svg width="20" height="20">
               <use href="../images/icons.svg/icon-linkedin"></use>
             </svg>  
           </li>
         </ul>
+      </div>
       </div>
     </footer>
   </body>
