--- a/portfolio.html
+++ b/portfolio.html
@@ -33,19 +33,26 @@
           </li>
         </ul>
       </nav>
-      <span>
+      <div>
         <ul class="menu-links">
-        <svg class="icon" width="16" height="12">
-          <use href="../images/icons.svg#icon-envelope"></use>
-        </svg>
-        <li>  
-        <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-        <a class="contact-link" href="tel:+48111111111">+48 111 111 111</a>
-        </li>
-        </ul>
-      </span>
+          <li class="icon">  
+            <svg width="16" height="12">
+              <use href="../images/icons.svg#icon-envelope"></use>
+            </svg>
+          </li>
+          <li class="link-item">
+          <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="icon">
+            <svg width="10" height="16">
+              <use href="../images/icons.svg#icon-smartphone"></use>
+            </svg>
+          </li>
+          <li class="link-item">
+          <a class="contact-link" href="tel:+48111111111">+48 111 111 111</a>
+          </li>
+          </ul>
+      </div>
       </div>
     </header>
     <main>
