--- a/portfolio.html
+++ b/portfolio.html
@@ -218,6 +218,35 @@
           <a href="tel:+48111111111" class="footer-mail">+48 111 111 111</a>
         </div>
         </address>
+        <div class="joinus-box">
+          <p class="joinus">DOŁĄCZ DO NAS</p>
+          <ul class="icons">
+            <li class="somedia">
+              <svg width="10.28" height="10.28">
+                <use href="../images/icons.svg#icon-instagram"></use>
+              </svg>  
+            </li>
+            <li class="somedia">
+              <svg width="20" height="16.25">
+                <use href="../images/icons.svg/icon-twitter"></use>
+              </svg>  
+            </li>
+            <li class="somedia">
+              <svg width="10" height="20">
+                <use href="../images/icons.svg#icon-facebook"></use>
+              </svg>  
+            </li>
+            <li class="somedia">
+              <svg width="20" height="20">
+                <use href="../images/icons.svg/icon-linkedin"></use>
+              </svg>  
+            </li>
+          </ul>
+        </div>
+        </div>
+      </footer>
+    </body>
+  </html>    
       </footer>
     </body>
   </html>        
