--- a/index.html
+++ b/index.html
@@ -208,7 +208,10 @@
                   width="270"
                   height="260"
                 />
-                <div class="somedia-box">  
+                <div class="somedia-box">
+                  <figcaption> 
+                    <p class="team-name">John Doe</p>
+                    <p class="team-position">Frontend Designer</p> 
                   <ul class="icons">
                     <li class="somedia">
                       <svg width="10.28" height="10.28">
@@ -231,10 +234,7 @@
                       </svg>  
                     </li>
                   </ul> 
-                  </div> 
-                <figcaption> 
-                <p class="team-name">John Doe</p>
-                <p class="team-position">Frontend Designer</p>
+                  </div>
                 </figcaption>
               </figure>
               </li>
@@ -372,22 +372,22 @@
       <div class="joinus-box">
         <p class="joinus">DOŁĄCZ DO NAS</p>
         <ul class="icons">
-          <li class="somedia">
+          <li class="somedia-footer">
             <svg width="10.28" height="10.28">
               <use href="../images/icons.svg#icon-instagram"></use>
             </svg>  
           </li>
-          <li class="somedia">
+          <li class="somedia-footer">
             <svg width="20" height="16.25">
               <use href="../images/icons.svg/icon-twitter"></use>
             </svg>  
           </li>
-          <li class="somedia">
+          <li class="somedia-footer">
             <svg width="10" height="20">
               <use href="../images/icons.svg#icon-facebook"></use>
             </svg>  
           </li>
-          <li class="somedia">
+          <li class="somedia-footer">
             <svg width="20" height="20">
               <use href="../images/icons.svg/icon-linkedin"></use>
             </svg>  
