--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <!-- IKONY I TEKST -->
       <section class="section box">
         <section class="container">
-          <ul class="icons">
+          <ul class="icons-clients">
             <li class="icon-index">
               <svg width="270" height="120">
                 <use href="../images/icons.svg#icon-antenna"></use>
@@ -321,7 +321,7 @@
     <section class="section box">
       <div class="container">
         <h2 class="clients">Nasi klienci</h2>
-        <ul class="icons">
+        <ul class="icons-clients">
           <li class="icon-border">
             <svg width="170" height="92">
               <use href="../images/icons.svg#icon-client-1"></use>
