--- a/portfolio.html
+++ b/portfolio.html
@@ -207,36 +207,38 @@
             </div>
           </section>
       </main>
+      <!--Footer-->
       <footer class="footers">
-        <div class="container footers-section">
+        <div class="container global-footer">
+        <div class="footers-section">
           <a class="brand-link" href="#">
           Web<span class="brand-f">Studio</span>
          </a>
         <address class="footer-box">
           <p class="address-link">m.Warszawa, Aleje Jerozolimskie 21</p>
           <a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a>
-          <a href="tel:+48111111111" class="footer-mail">+48 111 111 111</a>
+          <a href="tel:+48111111111" class="footer-link">+48 111 111 111</a>
         </div>
         </address>
         <div class="joinus-box">
           <p class="joinus">DOŁĄCZ DO NAS</p>
           <ul class="icons">
-            <li class="somedia">
+            <li class="somedia-footer">
               <svg width="10.28" height="10.28">
                 <use href="../images/icons.svg#icon-instagram"></use>
               </svg>  
             </li>
-            <li class="somedia">
+            <li class="somedia-footer">
               <svg width="20" height="16.25">
                 <use href="../images/icons.svg/icon-twitter"></use>
               </svg>  
             </li>
-            <li class="somedia">
+            <li class="somedia-footer">
               <svg width="10" height="20">
                 <use href="../images/icons.svg#icon-facebook"></use>
               </svg>  
             </li>
-            <li class="somedia">
+            <li class="somedia-footer">
               <svg width="20" height="20">
                 <use href="../images/icons.svg/icon-linkedin"></use>
               </svg>  
@@ -247,6 +249,4 @@
       </footer>
     </body>
   </html>    
-      </footer>
-    </body>
-  </html>        
+     
